--- a/projetofinal/src/main/resources/application.properties
+++ b/projetofinal/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/projetofinal?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Sjq^F2d3
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+ 
+
+spring.jpa.show_sql=true
+
+ 
+
+spring.datasource.testWhileidle=true
+spring.datasource.validationQuery=select 1
+
+ 
+
+spring.jpa.hibernate.ddl-auto=update
