--- a/projetofinal/bin/src/main/resources/application.properties
+++ b/projetofinal/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://192.168.0.7:3306/projetofinal?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/projetofinal?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1wzq1MumVYaJ
+spring.datasource.password=Sjq^F2d3
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
  
