--- a/projetofinal/src/main/resources/application.properties
+++ b/projetofinal/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/polimorfos?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/itau?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=teste123
+spring.datasource.password=12345
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
